<resources>
    <string name="app_name">appme</string>
    <string name="str_yesterday">昨日</string>
    <string name="str_today">今日</string>
    <string name="str_last_week">上周</string>
    <string name="str_this_week">本周</string>
    <string name="str_last_month">上月</string>
    <string name="str_this_month">本月</string>
    <string name="work_schedule_today">今日工作计划</string>
    <string name="work_schedule_this_week">本周工作计划</string>
    <string name="work_schedule_this_mohth">本月工作计划</string>
    <string name="work_schedule_empty_yesterday">昨日未填写任何工作计划</string>
    <string name="work_schedule_empty_last_week">上周未填写任何工作计划</string>
    <string name="work_schedule_empty_last_month">上月未填写任何工作计划</string>
    <string name="work_summary_today">今日工作总结</string>
    <string name="work_summary_this_week">本周工作总结</string>
    <string name="work_summary_this_month">本月工作总结</string>
    <string name="please_input_work_summary_today">请输入今日工作总结（必填）</string>
    <string name="please_input_work_summary_this_week">请输入本周工作总结（必填）</string>
    <string name="please_input_work_summary_this_month">请输入本月工作总结（必填）</string>
    <string name="work_schedule_tomorrow">明日工作计划</string>
    <string name="work_schedule_next_week">下周工作计划</string>
    <string name="work_schedule_next_month">下月工作计划</string>
    <string name="please_input_work_schedule_tomorrow">请输入明日工作计划（非必填）</string>
    <string name="please_input_work_schedule_next_week">请输入下周工作计划（非必填）</string>
    <string name="please_input_work_schedule_next_month">请输入下月工作计划（非必填）</string>
    <string name="share_work_experience_to_zone">点击分享按钮可将工作心得分享到工作圈（非必填）</string>
    <string name="daily_report_record">日报记录</string>
    <string name="weekly_report_record">周报记录</string>
    <string name="monthly_report_record">月报记录</string>
    <string name="save_to_entry_status_failed">保存为在录入状态失败！</string>
    <string name="weekly_report_detail">周报详情</string>
    <string name="monthly_report_detail">月报详情</string>
    <string name="report_submit_result">工作%1$s报提交%2$s</string>
    <string name="report_submit_notice">确定提交工作%1$s报吗？</string>
    <string name="report_update_result">工作%1$s报更新%2$s</string>
    <string name="report_resubmit_result">工作%1$s报重新提交%2$s</string>
    <string name="report_delete_result">工作%1$s报删除%2$s</string>
    <string name="report_unsubmit_result">工作%1$s报反提交%2$s</string>
    <string name="str_work_report">工作报告</string>
    <string name="word_overrun_one_thousand">字数超限1000了喔!</string>
    <string name="module_start_using">已启用的功能模块</string>
    <string name="module_not_start_using">未启用的功能模块</string>
    <string name="work_module_custom">模块自定义</string>
    <string name="work_func_set">应用设置</string>
    <string name="city_industry_service">产城服务</string>
    <string name="common_service_query">常用业务查询</string>
    <string name="more_queries">更多查询</string>
    <string name="select_query_service">选择查询业务</string>
    <string name="report_query">报表查询</string>
    <string name="report_query_prompt">报表查询结果是PDF文件，\n需要耗费您一些流量....</string>
    <string name="str_downloading">正在预览...</string>
    <string name="re_download">重新预览</string>
    <string name="search_history">搜索历史</string>
    <string name="str_clear">清空</string>
    <string name="pause_download">暂停预览</string>
    <string name="continue_download">继续预览</string>
    <string name="obtain_pdf_path">正在获取报表文件资源,请稍候...</string>
    <string name="download_paused">预览已暂停</string>
    <string name="str_reloading">正在加载....</string>
    <string name="charitable">一元捐</string>
    <string name="charitable_user_agreement"><u>《优软一元捐用户协议》</u></string>
    <string name="new_select_pay">当前选择</string>
    <string name="input_two_double">只能键入两位小数</string>
    <string name="not_more_pay">金额不能大于99999</string>
    <string name="not_pay_num_can">支付金额不符合标准</string>
    <string name="find_num_project">查到<b>%1$d</b>个相关项目</string>
    <string name="regx_operator">\\%1$s</string>
    <string name="title_device_manage">设备管理</string>
    <string name="text_scan_device">扫一扫</string>
    <string name="text_device_query">设备查询</string>
    <string name="text_application_use">使用申请</string>
    <string name="text_scrap_application">报废申请</string>
    <string name="text_maintenance">养护管理</string>
    <string name="text_fault_inspection">故障送检</string>
    <string name="text_cycle_count">周期盘点</string>
    <string name="text_device_query_match">需求匹配</string>
    <string name="text_cycle_count_add">添加盘点</string>
    <string name="more_info"><u>详细信息</u></string>
    <string name="cycle">盘点</string>
    <string name="str_purchase_order_list">客户采购订单</string>
    <string name="str_customer_inquiry_list">客户询价单</string>
    <string name="str_public_inquiry_list">我的商机</string>
    <string name="str_bill_num">单号:</string>
    <string name="str_material_num">物料编号:</string>
    <string name="str_money">金额:</string>
    <string name="str_wait_for_reply">待回复</string>
    <string name="str_have_replied">已回复</string>
    <string name="str_case_closed">已结案</string>
    <string name="str_expiry_date">截止日期:</string>
    <string name="str_quotation_adopted">已采纳</string>
    <string name="str_expired">已过期</string>
    <string name="str_quoted_price">已报价</string>
    <string name="str_product_name">产品名称:</string>
    <string name="str_product_model">产品型号:</string>
    <string name="str_product_specification">产品规格:</string>
    <string name="str_product_amount">数量:</string>
    <string name="str_product_brand">品牌:</string>
    <string name="str_offer_quotation">我要报价</string>
    <string name="please_select_company">请选择以下企业登录</string>
    <string name="binded_company">已绑定企业</string>
    <string name="str_wait_quoted">待报价</string>
    <string name="str_adopted">已采纳</string>
    <string name="account_bound_following_enterprises">您的账号绑定了下列企业</string>
    <string name="select_one_company_log_in">请选择其中一个企业登录</string>
    <string name="str_inquiry_information">询价信息</string>
    <string name="str_material_information">物料信息</string>
    <string name="str_divisions_count">段数</string>
    <string name="str_segments_amount">分段数量</string>
    <string name="str_segments_price">分段单价</string>
    <string name="str_quote_price">报价</string>
    <string name="str_quotation_unadopted">未采纳</string>
    <string name="str_invalid">已失效</string>
    <string name="str_unexpired">未过期</string>
    <string name="delivery_period_can_not_be_empty">交货周期不能为空</string>
    <string name="unfilled_items_in_subsection_quotation">分段报价存在未填项</string>
    <string name="quote_success">报价成功</string>
    <string name="public_inquiry_id">询价编号</string>
    <string name="public_inquiry_company">询价企业</string>
    <string name="public_inquiry_phone">联系电话</string>
    <string name="public_inquiry_contact">联系人</string>
    <string name="public_inquiry_enddate">报价截止日期</string>
    <string name="public_inquiry_attachs">附件</string>
    <string name="public_inquiry_model">型号</string>
    <string name="public_inquiry_brand">品牌</string>
    <string name="public_inquiry_spec">规格</string>
    <string name="public_inquiry_material">物料名称</string>
    <string name="public_inquiry_unit">单位</string>
    <string name="public_inquiry_amount">数量</string>
    <string name="customer_inquiry_customer">客户</string>
    <string name="customer_inquiry_customer_address">客户地址</string>
    <string name="customer_inquiry_customer_phone">联系电话</string>
    <string name="customer_inquiry_bill_num">单据</string>
    <string name="customer_inquiry_material">物料</string>
    <string name="customer_inquiry_currency">币别</string>
    <string name="customer_inquiry_taxrate">税率</string>
    <string name="customer_inquiry_environment">环保要求</string>
    <string name="customer_inquiry_price_type">价格类型</string>
    <string name="customer_inquiry_leadtime">交货周期</string>
    <string name="customer_inquiry_min_order">最小起订</string>
    <string name="customer_inquiry_min_pack">最小包装</string>
    <string name="str_abandoned">已作废</string>
    <string name="title_quoted_price">已转报价</string>
    <string name="str_material_name">物料名称:</string>
    <string name="str_material_spec">物料规格:</string>
    <string name="modify_quote_price">修改报价</string>
    <string name="str_currency">币别:</string>
    <string name="str_quote_information">报价信息</string>
    <string name="revolving_mobile_phone_full_screen_browsing">旋转手机可全屏浏览</string>
    <string name="number_of_segments_please_keep_increasing">分段数量请保持递增！</string>
    <string name="purchase_order_search_hint">单据编号/客户名称/物料名称</string>
    <string name="customer_inquiry_search_hint">单据编号/客户名称/物料名称</string>
    <string name="public_inquiry_search_hint">单据编号/客户名称/物料名称</string>
    <string name="register_unsuccessed_sure_to_exit">注册未完成，确定退出？</string>
    <string name="please_select_currency">请选择币别</string>
    <string name="public_inquiry_taxrate">税率(%)</string>
    <string name="have_knew">我知道了</string>
    <string name="notice_cannot_quote">您当前登录的账套未开通B2B服务，无法报价，请切换账套后重试</string>
    <string name="customer_inquiry_product_code">产品编号</string>
    <string name="customer_inquiry_product_name">产品名称</string>
    <string name="customer_inquiry_product_cmpcode">产品型号</string>
    <string name="customer_inquiry_product_brand">品牌</string>
    <string name="customer_inquiry_product_spec">产品规格</string>
    <string name="customer_inquiry_encapsulation">封装</string>
    <string name="customer_inquiry_needquantity">采购数量</string>
    <string name="customer_inquiry_unitPrice">单价预算</string>
    <string name="customer_inquiry_produceDate">生产日期</string>
    <string name="str_finished">已结束</string>
    <string name="str_invite">邀请</string>
    <string name="caption_enterprise_name">企业名称：</string>
    <string name="caption_register_linkman">联系人：</string>
    <string name="caption_register_phone">联系电话：</string>
    <string name="caption_invite_date">邀请日期：</string>
    <string name="caption_register_date">注册日期：</string>
    <string name="invite_count">邀请数</string>
    <string name="register_count">注册数</string>
    <string name="unregister_count">未注册数</string>
    <string name="enterprise_name">企业名称</string>
    <string name="str_linkman">联系人</string>
    <string name="str_contact_number">联系电话</string>
    <string name="hint_enterprise_name">例如：***有限公司</string>
    <string name="hint_linkman">例如：张三</string>
    <string name="hint_contact_phone">例如：13433442374</string>
    <string name="str_statistics">统计</string>
    <string name="str_registered">已注册</string>
    <string name="str_unregistered">未注册</string>
    <string name="invite_detail">邀请明细</string>
    <string name="register_detail">注册明细</string>
    <string name="unregister_detail">未注册明细</string>
    <string name="enterprise_register_detail">企业注册详情</string>
    <string name="caption_enterprise_address">企业地址</string>
    <string name="caption_enterprise_corporation">企业法人</string>
    <string name="caption_enterprise_admin">管理员</string>
    <string name="caption_inviter">邀请人</string>
    <string name="caption_invite_enterprise">邀请企业</string>
    <string name="str_register_date">注册日期</string>
    <string name="str_share_success">分享成功</string>
    <string name="str_share_fail">分享失败</string>
    <string name="str_share_cancel">分享取消</string>
    <string name="apply_hava_send">申请已发送</string>
    <string name="caption_invite_name">邀请人：</string>
    <string name="host_null_please_login_retry">站点地址获取失败，请重新登录后重试</string>
    <string name="caption_time">时间:</string>
    <string name="caption_inquiry_date">询价日期:</string>
    <string name="str_remain">剩余</string>
    <string name="str_days">天</string>
    <string name="str_company_business_list">公司商机</string>
    <string name="quote_current_model">当前型号报价</string>
    <string name="quote_replace_model">替代型号报价</string>
    <string name="str_quote_by_stage">分段报价</string>
    <string name="customer_inquiry_expirydate">截止日期</string>
    <string name="public_inquiry_quote_product_name">类目(产品名称)</string>
    <string name="public_inquiry_quote_product_cmpcode">型号</string>
    <string name="public_inquiry_quote_product_spec">规格</string>
</resources>