<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_b2b_list_item_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_customer_inquiry_company_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_b2b_list_company"
                android:padding="6dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="深圳市英唐数码电器有限公司" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/str_bill_num" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_bill_num_tv"
                            style="@style/b2b_business_item_value"
                            tools:text="2018-01-21" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/str_material_num" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_material_num_tv"
                            style="@style/b2b_business_item_value"
                            tools:text="2018-01-21" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/str_material_name" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_material_name_tv"
                            style="@style/b2b_business_item_value"
                            tools:text="2018-01-21" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/str_material_spec" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_material_spec_tv"
                            style="@style/b2b_business_item_value"
                            tools:text="2018-01-21" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/caption_inquiry_date" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_bill_date_tv"
                            style="@style/b2b_business_item_value"
                            tools:text="2018-01-21" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/b2b_business_item_caption"
                            android:text="@string/str_expiry_date" />

                        <TextView
                            android:id="@+id/list_customer_inquiry_expiry_date_tv"
                            style="@style/b2b_business_item_value"
                            android:textColor="@color/red"
                            android:textStyle="bold"
                            tools:text="1323" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="-150dp"
                    android:layout_marginRight="-140dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/shape_dotted_line"
                    android:layerType="software" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/list_customer_inquiry_remaintime_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="16dp"
                        tools:text="剩余0天" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_quotation_adopted_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_end_bg"
                        android:text="@string/str_quotation_adopted"
                        android:textColor="@color/b2b_btn_end"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_expired_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_end_bg"
                        android:text="@string/str_expired"
                        android:textColor="@color/b2b_btn_end"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_quoted_price_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_end_bg"
                        android:text="@string/str_quoted_price"
                        android:textColor="@color/b2b_btn_end"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_wait_quoted_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_todo_bg"
                        android:text="@string/str_wait_quoted"
                        android:textColor="@color/b2b_btn_todo"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_quotation_unadopted_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_done_bg"
                        android:text="@string/str_quotation_unadopted"
                        android:textColor="@color/b2b_btn_done"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_invalid_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_end_bg"
                        android:text="@string/str_invalid"
                        android:textColor="@color/b2b_btn_end"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/list_customer_inquiry_abandoned_btn"
                        style="@style/b2b_business_state_btn"
                        android:background="@drawable/shape_b2b_end_bg"
                        android:text="@string/str_abandoned"
                        android:textColor="@color/b2b_btn_end"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>