<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#deeefa"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/invite_register_main_invite_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_count"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/invite_register_main_invite_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/invite_register_main_register_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_count"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/invite_register_main_register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/invite_register_main_unregister_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unregister_count"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/invite_register_main_unregister_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/enterprise_name"
                android:textSize="14sp" />

            <com.core.widget.ClearEditText
                android:id="@+id/invite_register_main_enterprise_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_weight="3.5"
                android:background="@drawable/shape_b2b_detail_edittext"
                android:gravity="center_vertical"
                android:hint="@string/hint_enterprise_name"
                android:paddingLeft="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/str_linkman"
                android:textSize="14sp" />

            <com.core.widget.ClearEditText
                android:id="@+id/invite_register_main_linkman_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_weight="3.5"
                android:background="@drawable/shape_b2b_detail_edittext"
                android:gravity="center_vertical"
                android:hint="@string/hint_linkman"
                android:paddingLeft="10dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/str_contact_number"
                android:textSize="14sp" />

            <com.core.widget.ClearEditText
                android:id="@+id/invite_register_main_phone_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:layout_weight="3.5"
                android:background="@drawable/shape_b2b_detail_edittext"
                android:gravity="center_vertical"
                android:hint="@string/hint_contact_phone"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/invite_register_main_invite_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/selector_confirm_bg"
        android:enabled="false"
        android:padding="8dp"
        android:text="@string/str_invite"
        android:textColor="@color/white"
        android:textSize="@dimen/text_main" />
</LinearLayout>