<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/customer_inquiry_detail_data_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="分段报价"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <View
                style="@style/expense_table_h_1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    style="@style/expense_table_v_1dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:text="@string/str_divisions_count" />

                <View
                    style="@style/expense_table_v_1dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/str_segments_amount"
                    />

                <View
                    style="@style/expense_table_v_1dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:paddingLeft="10dp"
                    android:text="@string/str_segments_price"
                    />

                <View
                    style="@style/expense_table_v_1dp" />

                <ImageView
                    android:id="@+id/customer_inquiry_detail_add_iv"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/ic_b2b_add" />

                <View
                    android:id="@+id/customer_inquiry_detail_add_line"
                    style="@style/expense_table_v_1dp"
                    />
            </LinearLayout>

            <View
                style="@style/expense_table_h_1dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/customer_inquiry_detail_quote_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:cacheColorHint="#00000000" />

        <Button
            android:id="@+id/customer_inquiry_detail_quote_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_bule_btn"
            android:padding="8dp"
            android:text="@string/str_quote_price"
            android:textColor="@color/white"
            android:textSize="@dimen/text_main"
            android:visibility="gone" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>